<resources>
    <string name="app_name">My movies</string>
    <string name="poster_of_movie">Movie poster</string>
    <string name="text_view_top_rated">Top rated</string>
    <string name="text_view_popularity">Most Popular</string>
    <string name="add_to_fav">Added to favorites</string>
    <string name="del_from_fav">Removed from favorites</string>
    <string name="text_view_movie_name">Title:</string>
    <string name="text_view_orig_title">Original name:</string>
    <string name="text_view_rating">Rating::</string>
    <string name="text_view_relaese_date">Movie Release Date:</string>
    <string name="text_view_overview">Description:</string>
    <string name="item_main">Home</string>
    <string name="item_fav">Favorite</string>
    <string name="launch_trailer">Launch trailer</string>
    <string name="poster_photo">Photo poster</string>
    <string name="star_add_to_fav">add to favorites</string>
</resources>
